--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,5 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
