--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,12 @@ h1 {
     text-align: center;
     margin: 4vh auto;
 }
+h2 {
+    font-family: var(--font-secondary);
+    text-align: center;
+    font-size: 3rem;
+    margin: 30px auto;
+}
 
 /* header begin */
 .header {
@@ -163,7 +169,7 @@ footer {
     border: 2px solid var(--color-orange);
     border-radius: 4px 0 0 4px;
     height: 36px;
-    margin-top: 50px;
+    margin-top: 35vh;
 }
 
 .svg-container {
@@ -175,7 +181,7 @@ footer {
     padding: 8px;
     border: 2px solid var(--color-orange);
     border-radius: 0 4px 4px 0;
-    margin-top: 50px;
+    margin-top: 35vh;
 }
 
 .icon {
@@ -216,13 +222,23 @@ img {
 }
 
 p {
-    text-align: center; 
-    max-width: 600px; 
-    margin: 10px auto; 
+    font-family: var(--font-primary);
+    font-size: 20px;
+    margin: 25px;
+    line-height: 1.5em; 
 }
 
-.save, .share, .print, .jump {
-    position: relative;
+.recipe-details {
+    margin: 0 30px;
+    line-height: 1.5em;
+}
+.bold {
+    font-weight: bold;
+    /* padding: 10px; */
+}
+
+.bold + td {
+    padding-left: 10px;
 }
 
 
