--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ footer {
 .menu-container, .avatar-container {
     display: flex;
     flex-direction: column;
-    align-items: center;;
+    align-items: center;
 }
 
 /* header end */
@@ -229,6 +229,7 @@ p {
 }
 
 .recipe-details {
+    font-family: var(--font-primary);
     margin: 0 30px;
     line-height: 1.5em;
 }
@@ -239,6 +240,28 @@ p {
 
 .bold + td {
     padding-left: 10px;
+}
+.ingredients {
+    font-family: inherit; 
+}
+
+.ingredients ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin-left: 30px; 
+}
+
+.ingredients h2 {
+    font-family: var(--font-secondary);
+}
+
+.avatar-container p, .menu-container p {
+    font-family: var(--font-secondary);
+    font-size: 1.5em;
+    margin: 20px 0;
+}
+.avatar-container svg, .menu-container svg {
+    margin-top: 30px;
 }
 
 
