--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ footer {
 }
 
 .recipe-container p {
-    color: #EB5428;
+    color: var(--color-orange);
     font-size: 16px;
 }
 
@@ -232,9 +232,11 @@ p {
     font-family: var(--font-primary);
     margin: 0 30px;
     line-height: 1.5em;
+    text-align: center;
 }
 .bold {
     font-weight: bold;
+    text-align: left;
     /* padding: 10px; */
 }
 
@@ -249,6 +251,7 @@ p {
     list-style-type: disc;
     padding-left: 20px;
     margin-left: 30px; 
+    line-height: 1.8em;
 }
 
 .ingredients h2 {
@@ -263,7 +266,15 @@ p {
 .avatar-container svg, .menu-container svg {
     margin-top: 30px;
 }
-
+ol {
+    list-style-type: decimal; 
+    margin: 0px 10px 0px 30px;
+    padding-left: 20px;
+     
+}
+ol li {
+    line-height: 1.5em;
+}
 
 
 
